Bug 1813310 - Do not instanciate the Profiler Runnable RAII if the profiler isn't running r=florian

In Bug 1688300, we implemented that we emit markers when a Runnable
runs. But this has some performance consequences because we instanciate
the RAII even when the profiler doesn't run, even though we don't do
anything in it. Especially we're running TimeStamp::Now() which can be
slow on some platforms.

This patch avoids this by instanciating the RAII only when the profiler
runs.

Differential Revision: https://phabricator.services.mozilla.com/D168374